added machine learning models

--- a/Stroke_dataset_EDA_and_classification.ipynb
+++ b/Stroke_dataset_EDA_and_classification.ipynb
@@ -2049,18 +2049,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Building machine learning models\n",
+    "\n",
+    "We will use:\n",
+    "* Logistic regression\n",
+    "* Decision tree\n",
+    "* Random forest\n",
+    "* AdaBoost\n",
+    "* Support Vector "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier\n",
+    "from sklearn import svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [LogisticRegression(), DecisionTreeClassifier(), AdaBoostClassifier(), RandomForestClassifier(), svm.SVC()]"
+   ]
   },
   {
    "cell_type": "code",
